<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:background="@drawable/background_login_image"
    tools:context=".activity.mainactivity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/back_curve"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:src="@drawable/back_arrow"
                android:layout_margin="10dp"
                android:layout_height="24dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:text="Create New Password"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textSize="22sp"
                android:fontFamily="@font/poppinssemibold"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_width="310dp"
                android:text="@string/create_new_pass_content"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/poppinsregular"
                android:layout_height="wrap_content">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/back_rounded_image"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="14sp">

                </EditText>


                <ImageView
                    android:id="@+id/eye_pass"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/eye_invisible" />



            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/must_be"
                android:textColor="#B4B4B4"
                android:textSize="14sp" />




            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@drawable/back_rounded_image"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="14sp">

                </EditText>


                <ImageView
                    android:id="@+id/eye_confirm_pass"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/eye_invisible" />

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/both_password"
                android:textColor="#B4B4B4"
                android:textSize="14sp" />



            <TextView
                android:id="@+id/send_code"
                android:layout_width="match_parent"
                android:text="@string/reset_pass"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:background="@drawable/back_blue_large"
                android:layout_height="55dp">

            </TextView>

        </LinearLayout>



    </LinearLayout>







</LinearLayout>