<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:background="@drawable/background_login_image"
    tools:context=".activity.mainactivity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".profile.editProfile.EditProfileActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_test"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    android:layout_marginTop="50dp"

                    android:layout_height="144dp"
                    />



                <LinearLayout

                    android:layout_width="match_parent"
                    android:orientation="vertical"

                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/back_rounded_image"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/login_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toLeftOf="@+id/tv_person_image"
                            android:background="@null"
                            android:fontFamily="@font/poppinsregular"
                            android:hint="@string/library_id"
                            android:paddingLeft="20dp"
                            android:singleLine="true"
                            android:textColor="#4C4D4F"
                            android:textSize="15sp">

                        </EditText>

                        <ImageView
                            android:id="@+id/tv_person_image"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="17dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginEnd="17dp"
                            android:layout_marginBottom="17dp"
                            android:src="@drawable/email" />


                    </RelativeLayout>




                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/back_rounded_image"
                        android:layout_height="60dp">

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@null"
                            android:fontFamily="@font/poppinsregular"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:paddingLeft="20dp"
                            android:singleLine="true"
                            android:textColor="#4C4D4F"
                            android:textSize="15sp">

                        </EditText>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="20dp"
                            android:layout_margin="17dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/eye_off" />


                    </RelativeLayout>

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/forgot_password"
                        android:gravity="end"
                        android:layout_marginTop="10dp"
                        android:textColor="#777373"
                        android:textSize="13sp" />


                    <TextView
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:text="@string/login"
                        android:textColor="#FFFFFF"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:background="@drawable/background_circle_theme_color"
                        android:layout_height="50dp">

                    </TextView>


                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppinsregular"
                        android:text="@string/dont_have_account"
                        android:textColor="#000000"
                        android:textSize="13sp" />



                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>







</LinearLayout>