<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".activity.mainactivity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">




                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/reg_four"
                    android:paddingHorizontal="20dp"
                    android:layout_height="80dp">

                </ImageView>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="match_parent">











                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_marginBottom="20dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_person_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppinssemibold"
                            android:text="@string/payment_now"
                            android:textColor="@color/black"
                            android:textSize="27sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/tv_person_name"
                            android:fontFamily="@font/poppinsregular"
                            android:text="@string/dont_have_refral_code"
                            android:textColor="#666363"
                            android:textSize="13sp" />

                        <LinearLayout
                            android:layout_width="279dp"
                            android:layout_height="159dp"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:background="@drawable/back_rectangle"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:textSize="60sp"
                                android:textColor="#1E4079"
                                android:fontFamily="@font/poppinssemibold"
                                android:layout_height="80dp"
                                android:text="999">

                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:textSize="20sp"
                                android:textColor="#000000"
                                android:fontFamily="@font/poppinssemibold"
                                android:layout_height="wrap_content"
                                android:text="For 3 Month">

                            </TextView>


                        </LinearLayout>


                        <TextView
                            android:id="@+id/payment"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="bottom"
                            android:layout_marginTop="40dp"
                            android:background="@drawable/background_circle_theme_color"
                            android:gravity="center"
                            android:text="@string/payment"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp">

                        </TextView>


                    </RelativeLayout>






                </LinearLayout>


            </LinearLayout>


    </LinearLayout>







</LinearLayout>